feat: SDK keys, env count on flag list, and internal error hardening (#4)
* feat: SDK keys, dockerfile, rework env endpoints to use id instead of
name

* fix: Flag env count, error 500 internal logging
