# src/routes/environments.go
@@ -11,6 +11,6 @@ func registerEnvironmentRoutes(api fiber.Router) {
 	proj := "/organizations/:org_id/projects/:project_id"
 	api.Get(proj+"/environments", response.Wrap(handlers.ListEnvironments))
 	api.Post(proj+"/environments", response.Wrap(handlers.CreateEnvironment))
-	api.Patch(proj+"/environments/:env_name", response.Wrap(handlers.RenameEnvironment))
-	api.Delete(proj+"/environments/:env_name", response.Wrap(handlers.DeleteEnvironment))
+	api.Patch(proj+"/environments/:env_id", response.Wrap(handlers.RenameEnvironment))
+	api.Delete(proj+"/environments/:env_id", response.Wrap(handlers.DeleteEnvironment))
 }
